--- a/build.gradle
+++ b/build.gradle
@@ -24,9 +24,18 @@ repositories {
 }
 
 dependencies {
+	//web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//OKHttp
+	implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+	//lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	//validation
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	//gson
+	implementation 'com.google.code.gson:gson:2.9.0'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
