Implement websocket for sending Indicators data

--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	//OKHttp
 	implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
+	//websocket
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
