--- a/build.gradle
+++ b/build.gradle
@@ -26,12 +26,30 @@ repositories {
 dependencies {
 	//web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	//jpa
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	//mysql
+	runtimeOnly 'com.mysql:mysql-connector-j'
+	implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '6.0.1.Final'
+	//security
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	//oauth2 client
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	//google api client
+	implementation 'com.google.api-client:google-api-client:1.32.1'
+	//jwt
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
 	//redis
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 	//OKHttp
 	implementation group: 'com.squareup.okhttp', name: 'okhttp', version: '2.7.5'
 	//websocket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	//feign client
+	implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.2")
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
